# rust-time-tracker-cli

./: Cargo.toml  LICENSE  README.md  timetracker.sqlite
src/: lib.rs  main.rs
tests/: integration.rs
utils/: Cargo.toml
utils/src/: lib.rs
