[package]
name = "time-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "7.2"
lazy_static = "1.4"
chrono = "0.4"
debug = { path = "./utils" }

[dev-dependencies]
predicates = "2.1"
assert_cmd = "2.0"
assert_fs = "1.0"
serial_test = "0.9"
