[package]
name = "time-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25"
chrono = "0.4"
r2d2_sqlite = "0.21"
rusqlite = "0.28"
clap = "4"

[dev-dependencies]
predicates = "2.1"
assert_cmd = "2.0"
assert_fs = "1.0"

[[bin]]
name = "time-tracker"

[lib]
name = "timetracker"

